--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -65,7 +65,7 @@
 	}
 	h3 {
 		flex: 1 1 100%;
-		@include font-size(18px);
+		font-size: rem(18px);
 		font-family: $font-01;
 		font-weight: 300;
 	}
@@ -76,14 +76,14 @@
 		border: 1px solid $color-01;
 		padding: 8px 10px;
 		text-align: center;
-		@include font-size(14px);
+		font-size: rem(14px);
 		text-transform: uppercase;
 		color: $color-01;
 		.button-text {
 			@include inline-block(middle);
 		}
 		.icon {
-			@include font-size(18px);
+			font-size: rem(18px);
 			margin: -4px 10px 0 0;
 		}
 		&:hover {
