--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -26,6 +26,7 @@ $color-14: #f5f5f5; // whiteish
 /* Fonts
 ========================================================================== */
 
+$base-font-size: 16;
 $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
 $font-01: 'Source Sans Pro', $sans-serif-fb;
