--- a/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
@@ -35,7 +35,7 @@ ul, ol, dl {
 pre, code {
 	white-space: normal;
 	display: block;
-	@include font-size(14px);
+	font-size: rem(14px);
 	font-family: 'Courier New', monospace;
 	background: $color-14;	
 	color: $color-02;
@@ -80,7 +80,7 @@ hr {
 	margin: 0 0 20px 0;
 	.wp-caption-text {
 		font-style: italic;
-		@include font-size(14px);	
+		font-size: rem(14px);
 	}
 }
 
@@ -232,12 +232,12 @@ hr {
 		.signature-greeting {
 			left: -60px;
 			top: 35px;
-			@include font-size(40px);
+			font-size: rem(40px);
 		}
 		.signature-name {
 			left: 0;
 			top: 40px;
-			@include font-size(125px);
+			font-size: rem(125px);
 			color: $color-07;
 		}
 	}
@@ -258,7 +258,7 @@ hr {
 				@include sizing(75px, 75px);
 				line-height: 65px;
 				margin: 0 0 5px 0;
-				@include font-size(20px);
+				font-size: rem(20px);
 			    border: 5px solid $color-06;
 			    background: $color-05;
 			    box-shadow: inset 3px 3px 10px rgba(0,0,0,0.55);			
@@ -266,7 +266,7 @@ hr {
 			}
 			.countdown-label {
 				font-family: $font-02;
-				@include font-size(30px);
+				font-size: rem(30px);
 			}
 		}
 	}
