--- a/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_form-fields.scss
@@ -49,7 +49,7 @@ input[type='button'], input[type='reset'], input[type='submit'], button, .button
 	padding: 0 30px;
 	text-transform: uppercase;
 	@include transition(background 0.3s ease-in-out);
-	@include font-size(14px);
+	font-size: rem(14px);
 	&:hover {
 		background: $color-06;
 	}
