--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -1,7 +1,7 @@
 /* 1340 Breakpoint
 ========================================================================== */
 
-@include respond(1340) {
+@include respond(em(1340)) {
 	#header-nav {
 		.wrapper {
 			padding: 0 0 0 20px;
@@ -21,7 +21,7 @@
 /* 1099 Breakpoint
 ========================================================================== */
 
-@include respond(1099) {
+@include respond(em(1099)) {
 	#top-bar .search-bar {	
 		max-width: 200px;
 	}
@@ -43,10 +43,10 @@
 		}
 		.header-content {
 			.site-name {
-				@include font-size(70px);
+				font-size: rem(70px);
 			}
 			.site-description {
-				@include font-size(16px);
+				font-size: rem(16px);
 			}
 		}
 	}
@@ -55,12 +55,12 @@
 /* 899 Breakpoint
 ========================================================================== */
 
-@include respond(899) {
+@include respond(em(899)) {
 	#header.front-page-header, #header.main-header {
 		height: 190px;
 	}
 	#header.front-page-header .header-content .site-name, #header.main-header h1 {
-		@include font-size(45px);
+		font-size: rem(45px);
 	}
 	#header.front-page-header {
 		.wrapper {
@@ -77,7 +77,7 @@
 /* 768 Breakpoint
 ========================================================================== */
 
-@include respond(768) {
+@include respond(em(768)) {
 	#top-bar {
 		.menu-social-container {
 			flex: 1 1 100%;
