Styles for mobile menu and adjust normal menu

--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -32,6 +32,11 @@ $sans-serif-fb: arial, sans-serif;
 $font-01: 'Source Sans Pro', $sans-serif-fb;
 $font-02: 'Qwigley', $serif-fb;
 
+/* Other
+========================================================================== */
+
+$mobile-menu-width: 250px;
+
 /* Icons
 ========================================================================== */
 
