--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -66,13 +66,14 @@
 	position: relative;
 	z-index: 2;
 	margin: 0 0 0 auto;
-	a {
-		color: $color-01;
-	}	
 	.menu {
 		@include flex(row wrap);
 		border-left: 1px solid $color-05 + #000;
 		border-right: 1px solid $color-05 - #222;
+		li a {
+			color: $color-01;
+			display: block;
+		}
 		& > li {
 			position: relative;	
 			border-right: 1px solid $color-05 + #000;
@@ -84,7 +85,6 @@
 				}						
 			}
 			& > a {
-				display: block;
 				height: 60px;
 				line-height: 60px;
 				overflow: hidden;
@@ -97,6 +97,9 @@
 					padding: 0 50px 0 20px;
 				}
 				.toggle-submenu {
+					@include sizing(20px, 20px);
+					line-height: 20px;
+					text-align: center;					
 					position: absolute;
 					right: 20px;
 					top: 20px;
@@ -125,7 +128,6 @@
 				}
 				li {			
 					a {
-						display: block;
 						margin: 0 0 5px 0;
 						&:hover {
 							color: $color-02;
@@ -218,8 +220,138 @@
 
 .mobile-menu-button {
 	display: none;
+    flex: 1;
+    max-width: 80px;
+    cursor: pointer;
+    span {
+    	@include inline-block(middle);
+    }
+    .icon {
+    	@include sizing(25px, 20px);	    	
+    	position: relative;
+    	margin: 0 5px 0 0;
+    	&.icon-lines {
+    		background: $color-01;
+	    	&:before, &:after {
+	    		display: block;
+	    		background: $color-03;
+	    		content: '';
+	    		@include sizing(100%, 4px);
+	    		position: absolute;
+	    		z-index: 2;
+	    		left: 0;
+	    	}
+	    	&:before {
+	    		top: 4px;
+	    	}
+	    	&:after {
+	    		bottom: 4px;
+	    	}	    		
+    	}
+    	&.icon-remove {
+    		display: none;
+    		font-size: rem(24px);
+    		line-height: 20px;
+    		top: -2px;
+    	}
+    }	
 }
 
 #mobile-menu {
-	left: -500px;
+	left: -($mobile-menu-width + 300);
+	background: $color-03;
+	border-right: 1px solid $color-04 - #222;
+	position: fixed;
+	top: 0;
+	z-index: 9999;
+	@include sizing($mobile-menu-width, 100%);
+	@include transition(left 0.3s ease-in-out);
+	&.show {
+		left: 0;			
+	}
+	.menu-main-container .menu {		
+		position: relative;
+		li {
+			border-top: 1px solid $color-04 + #000;
+			border-bottom: 1px solid $color-04 - #222;	
+			&:last-child:after {				
+				content: '';
+				display: block;
+				@include sizing(100%, 1px);
+				border-bottom: 1px solid $color-04 + #000;
+			}					
+			a {
+				color: $color-01;
+				display: block;	
+				padding: 10px;			
+			}
+		}
+		& > li {			
+			position: relative;
+			left: 0;
+			@include transition(left 0.3s ease-in-out);
+			&:first-child {
+				border-top: 1px solid transparent;
+			}
+			&.menu-item-has-children {
+				& > a {
+					padding: 10px 50px 10px 10px;
+				}
+				.icon {
+					&.toggle-submenu {
+						display: none;
+					}
+					&.slide-submenu {
+						@include sizing(20px, 20px);
+						line-height: 20px;
+						text-align: center;
+						position: absolute;
+						top: 12px;
+						right: 10px;					
+						z-index: 10;
+						cursor: pointer;
+						@include transition(all 0.5s ease-in-out);
+					  	transform: rotate(0deg);
+					}
+				}				
+			}			
+			.sub-menu {
+				width: 100%;
+				margin: 1px 0 0 0;
+				position: absolute;
+				left: -($mobile-menu-width + 300);
+				@include transition(left 0.5s ease-in-out);
+				li ul {
+					display: none;
+				}
+			}
+			&.slide-close {
+				left: -($mobile-menu-width + 300);	
+				height: 0;
+				overflow: hidden;
+				padding: 0;
+				border: 0;
+				& > * {
+					display: none;
+				}
+			}
+			&.slide-open {
+				background: $color-04 + #000;
+				border-top: 1px solid transparent;
+				& > a {
+					font-weight: bold;
+				}
+				.icon.slide-submenu {
+					transform: rotate(180deg);
+				}
+				.sub-menu {
+					left: 0;
+				}
+			}
+		}
+	}	
+}
+
+.logged-in #mobile-menu {
+	top: 47px;
 }
