--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -121,47 +121,21 @@
 	}
 	.mobile-menu-button {
 	    display: block;
-	    flex: 1;
-	    max-width: 80px;
-	    cursor: pointer;
-	    span {
-	    	@include inline-block(middle);
-	    }
-	    .icon {
-	    	@include sizing(25px, 20px);
-	    	background: $color-01;
-	    	position: relative;
-	    	margin: 0 5px 0 0;
-	    	&:before, &:after {
-	    		display: block;
-	    		background: $color-03;
-	    		content: '';
-	    		@include sizing(100%, 4px);
-	    		position: absolute;
-	    		z-index: 2;
-	    		left: 0;
-	    	}
-	    	&:before {
-	    		top: 4px;
-	    	}
-	    	&:after {
-	    		bottom: 4px;
-	    	}
-	    }
-	}
-	#mobile-menu {
-		background: $color-03;
-		position: fixed;
-		top: 0;
-		z-index: 9999;
-		@include sizing(300px, 100%);
-		@include transition(left 0.3s ease-in-out);
-		&.show {
-			left: 0;			
-		}
 	}
 	.mobile-open {
 		overflow: hidden;
+	}
+	body.mobile-open {
+		@include transition(margin 0.3s ease-in-out);
+		margin: 0 0 0 $mobile-menu-width;
+		.mobile-menu-button .icon {
+			&.icon-lines {
+				display: none;
+			}
+			&.icon-remove {
+				display: inline-block;
+			}
+		}
 	}
 	.entry-single .entry.post .entry-thumbnail, .entry-single .entry.page .entry-thumbnail {
 		top: -175px;
