--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -195,10 +195,10 @@
 
 #header.main-header {
 	background: $color-03;
-	height: 240px;
+	height: 250px;
 	margin: 0 0 30px 0;
 	.wrapper {
-		background: url($images + 'muses-forest.png') left center no-repeat;
+		background: url($images + 'muses-forest.png') -75px center no-repeat;
 		height: 100%;
 	}
 	h1 {
