--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -93,10 +93,20 @@
 
 .row {
 	@include flex(row wrap);
-	margin: 0 -20px;
 	.column {
 		flex: 1;
-		padding: 0 20px;
+	}
+	&.row-10 {
+		margin: 0 -10px;
+		.column {
+			padding: 0 10px;
+		}
+	}
+	&.row-20 {
+		margin: 0 -20px;
+		.column {
+			padding: 0 20px;
+		}
 	}
 }
 
