--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -9,7 +9,7 @@
 		@include flex(row wrap);
 		align-items: center;
 	}
-	.menu-social-container, .search-bar, .home-link {
+	.menu-social-container {
 		flex: 1;
 	}
 }
@@ -18,7 +18,7 @@
 ========================================================================== */
 
 #top-bar .search-bar {	
-	max-width: 300px;
+	flex: 0 0 300px;
 	margin: 0 0 0 10px;
 	.search-form {
 		margin: 0;
@@ -33,7 +33,7 @@
 
 #top-bar .home-link {
 	@include sizing(auto, 20px);
-	max-width: 35px;
+	flex: 0 0 35px;
 	text-align: right;
 	.icon {
 		font-size: rem(18px);
@@ -220,8 +220,7 @@
 
 .mobile-menu-button {
 	display: none;
-    flex: 1;
-    max-width: 80px;
+    flex: 0 0 80px;
     cursor: pointer;
     span {
     	@include inline-block(middle);
