--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -199,14 +199,15 @@
 			}
 		}
 	}
-	&.no-thumbnail .entry-details {
-		.review-information {
-			margin: 0 0 20px 20px;
-			left: -3px;
-		}
-		.review-synopsis {
-			margin: 0 0 20px 0;
-		}
+}
+
+.no-thumbnail .entry-single .entry.insprvw-review .entry-item-reviewed .entry-details {
+	.review-information {
+		margin: 0 0 20px 20px;
+		left: -3px;
+	}
+	.review-synopsis {
+		margin: 0 0 20px 0;
 	}
 }
 
