--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -209,10 +209,13 @@
 			margin: 0;
 			font-size: rem(55px);
 			text-shadow: 1px 2px 0 rgba(0,0,0,0.85);
-			&.has-thumbnail {
-				padding: 0 0 0 150px;
-			}
 		}
+	}
+}
+
+.has-thumbnail.single-post, .has-thumbnail.page {
+	#header.main-header .header-content h1 {
+		padding: 0 0 0 150px;
 	}
 }
 
