--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -162,8 +162,15 @@
 		}
 		.header-content h1 {
 			text-align: center;
-			&.has-thumbnail {
-				padding: 0;
+		}
+	}
+	.has-thumbnail.single-post, .has-thumbnail.page {
+		#header.main-header .header-content {
+			padding: 0 0 30px 0;
+			h1 {
+				padding: 0 0 10px 0;
+				max-height: 102px;
+				overflow: hidden;
 			}
 		}
 	}
@@ -202,11 +209,14 @@
 	// entry.scss
 	.entry-single {
 		.entry.post .entry-thumbnail, .entry.page .entry-thumbnail {
-			top: -75px;
+			top: -80px;
 			right: 0;
 			margin: auto;
 			@include sizing(100px, 100px);
 		}
+	}
+	.has-thumbnail .entry-single .entry.post {
+		padding: 40px 0 0 0;
 	}
 }
 
