--- a/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
@@ -87,6 +87,9 @@ hr {
 .wp-caption {
 	line-height: 0;	
 	border: 1px solid $color-05;	
+	&, img {
+		max-width: 100%;
+	}
 	.wp-caption-text {
 		@include muses-bg;
 		border-top: 0;
