--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -98,6 +98,10 @@
 		}
 		.entry.insprvw-review .book-author .book-author-thumbnail {
 			flex: 0 0 160px;
+			max-width: none;
+			.image-wrap img {
+				width: 100%;
+			}
 		}		
 	}
 	.content.full-width, #front-page-sections.full-width {
@@ -239,7 +243,7 @@
 
 	// entry.scss 
 	.entry-multiple .entry.post .entry-thumbnail, .entry-multiple .entry.insprvw-review .entry-item-reviewed,
-	.entry-author .entry-author-thumbnail, .book-author .book-author-thumbnail,
+	.archive .entry-author .entry-author-thumbnail, .archive .book-author .book-author-thumbnail,
 	.entry-single .entry.insprvw-review .book-author .book-author-thumbnail {
 		flex: 0 0 130px;
 	}
@@ -288,10 +292,7 @@
 	.entry-author .entry-author-thumbnail, .book-author .book-author-thumbnail {
 		margin: 0 0 10px 0;
 		.image-wrap {
-			max-height: 200px;
-			img {
-				width: 100%;
-			}			
+			max-height: 200px;	
 		}			
 	}
 	.entry-multiple {
@@ -301,14 +302,14 @@
 			}			
 		}		
 	}
-	.entry-single .entry .entry-content {
-		img[class*='wp-image-'] {
-			max-width: 100%;
-		}
-	}		
 	.entry-author .entry-author-thumbnail, .book-author .book-author-thumbnail {
 		.image-wrap img {
 			margin: -20% 0 0 0;
 		}		
 	}
+	.entry-single .entry .entry-content {
+		img[class*='wp-image-'] {
+			max-width: 100%;
+		}
+	}		
 }
