--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -88,7 +88,7 @@
 
 	// layout.scss
 	.row .column {
-		flex: 1 1 50%;
+		flex: 0 1 50%;
 	}	
 
 	// entry.scss
@@ -96,12 +96,12 @@
 		.entry.post .entry-thumbnail, .entry.page .entry-thumbnail {
 			top: -190px;
 		}
-		.entry.insprvw-review .book-author .book-author-thumbnail {
-			flex: 0 0 160px;
-			max-width: none;
-			.image-wrap img {
-				width: 100%;
-			}
+	}
+	.single .book-author .book-author-thumbnail {
+		flex: 0 0 160px;
+		max-width: none;
+		.image-wrap img {
+			width: 100%;
 		}		
 	}
 	.content.full-width, #front-page-sections.full-width {
@@ -129,7 +129,7 @@
 	// header.scss
 	#top-bar {
 		.menu-social-container {
-			flex: 1 1 100%;
+			flex: 0 1 100%;
 			text-align: center;
 			margin: 0 -5px 10px -5px;
 		}
@@ -244,7 +244,7 @@
 	// entry.scss 
 	.entry-multiple .entry.post .entry-thumbnail, .entry-multiple .entry.insprvw-review .entry-item-reviewed,
 	.archive .entry-author .entry-author-thumbnail, .archive .book-author .book-author-thumbnail,
-	.entry-single .entry.insprvw-review .book-author .book-author-thumbnail {
+	.single .book-author .book-author-thumbnail {
 		flex: 0 0 130px;
 	}
 	.entry-single .entry .entry-content {
